--- a/package.json
+++ b/package.json
@@ -50,12 +50,14 @@
     "express": "^4.12.3",
     "istanbul-instrumenter-loader": "^0.1.3",
     "jasmine-core": "^2.3.2",
+    "jquery": "^2.1.4",
     "karma": "^0.13.8",
     "karma-coverage": "^0.5.0",
     "karma-jasmine": "^0.3.5",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-spec-reporter": "0.0.20",
     "karma-webpack": "^1.7.0",
+    "moment": "^2.10.6",
     "nightwatch": "^0.8.6",
     "phantomjs": "^1.9.18",
     "rollup": "^0.21.0",
